--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@biomejs/biome": "^2.4.4",
     "@tscircuit/high-density-a01": "^0.0.4",
     "@types/bun": "latest",
+    "graphics-debug": "^0.0.86",
     "react-cosmos": "^7.1.1",
     "react-cosmos-plugin-vite": "^7.1.1",
     "vite": "^7.3.1"
